--- a/index.html
+++ b/index.html
@@ -8,6 +8,28 @@
     <title>Project Starbucks | by André Leandro</title>
 </head>
 <body>
-    
+    <header>
+        <div class="line"></div>
+        <div class="container header--area">
+            <div class="header--left">
+                <a href="#">
+                    <img src="assets/images/logo.png" alt="Logo Starbucks">
+                </a>
+            </div>
+            <div class="header--right">
+                <div class="header--search">
+                    <form>
+                        <input type="text" name="search" id="search" placeholder="Search">
+                        <button>
+                            <img src="assets/images/loupe.png" alt="pesquisar">
+                        </button>
+                    </form>
+                </div>
+                <div class="header--menu">
+                    <img src="assets/images/menu.png" alt="">
+                </div>
+            </div>
+        </div>
+    </header>
 </body>
 </html>
