Adicionado e estilizado Banner principal

--- a/index.html
+++ b/index.html
@@ -26,10 +26,21 @@
                     </form>
                 </div>
                 <div class="header--menu">
-                    <img src="assets/images/menu.png" alt="">
+                    <img src="assets/images/menu.png" alt="Menu">
                 </div>
             </div>
         </div>
     </header>
+    <section class="banner">
+        <div class="container">
+            <h1 class="title">Starbucks®<br/>Happy Hour</h1>
+            <span>We'll meet you in your inbox. Drink deals are on their way.</span>
+            <div class="banner--images">
+                <img src="assets/images/c1.jpg" alt="Brown coffe image">
+                <img src="assets/images/c2.jpg" alt="Darker coffe image">
+                <img src="assets/images/c3.jpg" alt="Green coffe image">
+            </div>
+        </div>
+    </section>
 </body>
 </html>
