Adicionado e estilizado a área 5 e o footer

--- a/index.html
+++ b/index.html
@@ -88,5 +88,11 @@
         </div>
         <div class="area4--img1"></div>
     </section>
+    <section class="area5"></section>
+    <footer>
+        by André Leandro<br/>
+        Créditos do layout para Nicepage<br/>
+        Project B7Web
+    </footer>
 </body>
 </html>
